v1.0.0/modules/schema/pages/class/MktContingency.adoc
= `MktContingency`
:toclevels: 4


+++Subclass of IEC 61970:Contingency.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:MktContingency`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/Contingency.adoc[`Contingency`]
*** *`MktContingency`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
MktContingency {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



ConstraintResults {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



ContingencyConstraintLimit {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



TransferInterfaceSolution {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



TransferInterfaceSolution {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



ContingencyElement {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




MktContingency -> ConstraintResults: ConstraintResults


MktContingency -> ContingencyConstraintLimit: ContingencyConstraintLimit


MktContingency -> TransferInterfaceSolution: TransferInterfaceSolutionB


MktContingency -> TransferInterfaceSolution: TransferInterfaceSolutionA


MktContingency -> ContingencyElement: ContingencyElement


MktContingency -> DiagramObject: DiagramObjects


MktContingency -> InstanceSet: InstanceSet


MktContingency -> Name: Names


MktContingency -> ChangeSetMember: PropertiesCIMDataObject


MktContingency -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<TransferInterfaceSolutionA,`TransferInterfaceSolutionA`>>
| 0..1
| xref::class/TransferInterfaceSolution.adoc[`TransferInterfaceSolution`]
| n/a

| <<TransferInterfaceSolutionB,`TransferInterfaceSolutionB`>>
| 0..1
| xref::class/TransferInterfaceSolution.adoc[`TransferInterfaceSolution`]
| n/a

| <<loadRolloverFlag,`loadRolloverFlag`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++load change flag 
Flag that indicates whether load rollover and load pickup should be processed for this contingency+++

| <<ltcControlFlag,`ltcControlFlag`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++ltc enable flag 
Flag that indicates if LTCs regulate voltage during the solution of the contingency+++

| <<participationFactorSet,`participationFactorSet`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Participation Factor flag 
An indication which set of generator participation factors should be used to re-allocate generation in this contingency+++

| <<screeningFlag,`screeningFlag`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++sceening flag for outage 
Flag that indicated whether screening is bypassed for the contingency+++

| <<ConstraintResults,`ConstraintResults`>>
| 0..*
| xref::class/ConstraintResults.adoc[`ConstraintResults`]
| n/a

| <<ContingencyConstraintLimit,`ContingencyConstraintLimit`>>
| 0..*
| xref::class/ContingencyConstraintLimit.adoc[`ContingencyConstraintLimit`]
| n/a

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<mustStudy,`mustStudy`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Set true if must study this contingency.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<ContingencyElement,`ContingencyElement`>>
| 0..*
| xref::class/ContingencyElement.adoc[`ContingencyElement`]
| +++A contingency can have any number of contingency elements.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#ConstraintResults]
=== `ConstraintResults`


[cols="h,4",width=65%]
|===
| URI
| `cim:MktContingency.ConstraintResults`
| Cardinality
| 0..*
| Type
| xref::class/ConstraintResults.adoc[`ConstraintResults`]


|===

//[discrete]
[#ContingencyConstraintLimit]
=== `ContingencyConstraintLimit`


[cols="h,4",width=65%]
|===
| URI
| `cim:MktContingency.ContingencyConstraintLimit`
| Cardinality
| 0..*
| Type
| xref::class/ContingencyConstraintLimit.adoc[`ContingencyConstraintLimit`]


|===

//[discrete]
[#ContingencyElement]
=== `ContingencyElement`
+++A contingency can have any number of contingency elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Contingency.ContingencyElement`
| Cardinality
| 0..*
| Type
| xref::class/ContingencyElement.adoc[`ContingencyElement`]

| Inherited from
| xref::class/Contingency.adoc[`Contingency`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#loadRolloverFlag]
=== `loadRolloverFlag`
+++load change flag 
Flag that indicates whether load rollover and load pickup should be processed for this contingency+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MktContingency.loadRolloverFlag`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#ltcControlFlag]
=== `ltcControlFlag`
+++ltc enable flag 
Flag that indicates if LTCs regulate voltage during the solution of the contingency+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MktContingency.ltcControlFlag`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#mustStudy]
=== `mustStudy`
+++Set true if must study this contingency.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Contingency.mustStudy`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/Contingency.adoc[`Contingency`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#participationFactorSet]
=== `participationFactorSet`
+++Participation Factor flag 
An indication which set of generator participation factors should be used to re-allocate generation in this contingency+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MktContingency.participationFactorSet`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#screeningFlag]
=== `screeningFlag`
+++sceening flag for outage 
Flag that indicated whether screening is bypassed for the contingency+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MktContingency.screeningFlag`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#TransferInterfaceSolutionA]
=== `TransferInterfaceSolutionA`


[cols="h,4",width=65%]
|===
| URI
| `cim:MktContingency.TransferInterfaceSolutionA`
| Cardinality
| 0..1
| Type
| xref::class/TransferInterfaceSolution.adoc[`TransferInterfaceSolution`]


|===

//[discrete]
[#TransferInterfaceSolutionB]
=== `TransferInterfaceSolutionB`


[cols="h,4",width=65%]
|===
| URI
| `cim:MktContingency.TransferInterfaceSolutionB`
| Cardinality
| 0..1
| Type
| xref::class/TransferInterfaceSolution.adoc[`TransferInterfaceSolution`]


|===


