v1.1.0/modules/schema/pages/class/MktContingency.adoc
= `MktContingency`
:toclevels: 4


+++Subclass of IEC 61970:Contingency.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:MktContingency`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/Contingency.adoc[`Contingency`]
*** *`MktContingency`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<ConstraintResults,`ConstraintResults`>>
//| [[slots_table.ConstraintResults]]<<ConstraintResults,`ConstraintResults`>>
| 0..* +
xref::class/ConstraintResults.adoc[`ConstraintResults`]
| _n/a_
| _n/a_

| <<ContingencyConstraintLimit,`ContingencyConstraintLimit`>>
//| [[slots_table.ContingencyConstraintLimit]]<<ContingencyConstraintLimit,`ContingencyConstraintLimit`>>
| 0..* +
xref::class/ContingencyConstraintLimit.adoc[`ContingencyConstraintLimit`]
| _n/a_
| _n/a_

| <<TransferInterfaceSolutionA,`TransferInterfaceSolutionA`>>
//| [[slots_table.TransferInterfaceSolutionA]]<<TransferInterfaceSolutionA,`TransferInterfaceSolutionA`>>
| 0..1 +
xref::class/TransferInterfaceSolution.adoc[`TransferInterfaceSolution`]
| _n/a_
| _n/a_

| <<TransferInterfaceSolutionB,`TransferInterfaceSolutionB`>>
//| [[slots_table.TransferInterfaceSolutionB]]<<TransferInterfaceSolutionB,`TransferInterfaceSolutionB`>>
| 0..1 +
xref::class/TransferInterfaceSolution.adoc[`TransferInterfaceSolution`]
| _n/a_
| _n/a_

| <<loadRolloverFlag,`loadRolloverFlag`>>
//| [[slots_table.loadRolloverFlag]]<<loadRolloverFlag,`loadRolloverFlag`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++load change flag 
Flag that indicates whether load rollover and load pickup should be processed for this contingency+++
| _n/a_

| <<ltcControlFlag,`ltcControlFlag`>>
//| [[slots_table.ltcControlFlag]]<<ltcControlFlag,`ltcControlFlag`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++ltc enable flag 
Flag that indicates if LTCs regulate voltage during the solution of the contingency+++
| _n/a_

| <<participationFactorSet,`participationFactorSet`>>
//| [[slots_table.participationFactorSet]]<<participationFactorSet,`participationFactorSet`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Participation Factor flag 
An indication which set of generator participation factors should be used to re-allocate...+++
| _n/a_

| <<screeningFlag,`screeningFlag`>>
//| [[slots_table.screeningFlag]]<<screeningFlag,`screeningFlag`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++sceening flag for outage 
Flag that indicated whether screening is bypassed for the contingency+++
| _n/a_

| <<ContingencyElement,`ContingencyElement`>>
//| [[slots_table.ContingencyElement]]<<ContingencyElement,`ContingencyElement`>>
| 0..* +
xref::class/ContingencyElement.adoc[`ContingencyElement`]
| +++A contingency can have any number of contingency elements.+++
| xref::class/Contingency.adoc[`Contingency`]

| <<mustStudy,`mustStudy`>>
//| [[slots_table.mustStudy]]<<mustStudy,`mustStudy`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Set true if must study this contingency.+++
| xref::class/Contingency.adoc[`Contingency`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#ConstraintResults]
=== `ConstraintResults`



[cols="h,4",width=65%]
|===
| URI
| `cim:MktContingency.ConstraintResults`
| Cardinality
| 0..*
| Type
| xref::class/ConstraintResults.adoc[`ConstraintResults`]


|===

////
[.text-left]
--
<<slots_table.ConstraintResults,&#10548;>>
--
////


//[discrete]
[#ContingencyConstraintLimit]
=== `ContingencyConstraintLimit`



[cols="h,4",width=65%]
|===
| URI
| `cim:MktContingency.ContingencyConstraintLimit`
| Cardinality
| 0..*
| Type
| xref::class/ContingencyConstraintLimit.adoc[`ContingencyConstraintLimit`]


|===

////
[.text-left]
--
<<slots_table.ContingencyConstraintLimit,&#10548;>>
--
////


//[discrete]
[#ContingencyElement]
=== `ContingencyElement`
+++A contingency can have any number of contingency elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Contingency.ContingencyElement`
| Cardinality
| 0..*
| Type
| xref::class/ContingencyElement.adoc[`ContingencyElement`]

| Inherited from
| xref::class/Contingency.adoc[`Contingency`]


|===

////
[.text-left]
--
<<slots_table.ContingencyElement,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#loadRolloverFlag]
=== `loadRolloverFlag`
+++load change flag 
Flag that indicates whether load rollover and load pickup should be processed for this contingency+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MktContingency.loadRolloverFlag`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.loadRolloverFlag,&#10548;>>
--
////


//[discrete]
[#ltcControlFlag]
=== `ltcControlFlag`
+++ltc enable flag 
Flag that indicates if LTCs regulate voltage during the solution of the contingency+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MktContingency.ltcControlFlag`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.ltcControlFlag,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#mustStudy]
=== `mustStudy`
+++Set true if must study this contingency.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Contingency.mustStudy`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/Contingency.adoc[`Contingency`]


|===

////
[.text-left]
--
<<slots_table.mustStudy,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#participationFactorSet]
=== `participationFactorSet`
+++Participation Factor flag 
An indication which set of generator participation factors should be used to re-allocate generation in this contingency+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MktContingency.participationFactorSet`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.participationFactorSet,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#screeningFlag]
=== `screeningFlag`
+++sceening flag for outage 
Flag that indicated whether screening is bypassed for the contingency+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MktContingency.screeningFlag`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.screeningFlag,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TransferInterfaceSolutionA]
=== `TransferInterfaceSolutionA`



[cols="h,4",width=65%]
|===
| URI
| `cim:MktContingency.TransferInterfaceSolutionA`
| Cardinality
| 0..1
| Type
| xref::class/TransferInterfaceSolution.adoc[`TransferInterfaceSolution`]


|===

////
[.text-left]
--
<<slots_table.TransferInterfaceSolutionA,&#10548;>>
--
////


//[discrete]
[#TransferInterfaceSolutionB]
=== `TransferInterfaceSolutionB`



[cols="h,4",width=65%]
|===
| URI
| `cim:MktContingency.TransferInterfaceSolutionB`
| Cardinality
| 0..1
| Type
| xref::class/TransferInterfaceSolution.adoc[`TransferInterfaceSolution`]


|===

////
[.text-left]
--
<<slots_table.TransferInterfaceSolutionB,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/ConstraintResults.adoc[`ConstraintResults`] | xref::class/ConstraintResults.adoc#MktContingency[`MktContingency`]



| xref::class/ContingencyConstraintLimit.adoc[`ContingencyConstraintLimit`] | xref::class/ContingencyConstraintLimit.adoc#MktContingency[`MktContingency`]



| xref::class/TransferInterfaceSolution.adoc[`TransferInterfaceSolution`] | xref::class/TransferInterfaceSolution.adoc# MktContingencyA[` MktContingencyA`]


|===

